<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:ignore="all"
    tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="#444444"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="#444444"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tue"
        android:textColor="#444444"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wed"
        android:textColor="#444444"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thu"
        android:textColor="#444444"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="#444444"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0pt"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="#444444"
        android:textSize="12sp" />
</merge>